# wzs-web

./: Cargo.toml  README.md
src/: auth.rs  config.rs  db.rs  graphql.rs  image.rs  lib.rs  notification.rs  time.rs  web.rs
src/auth/: jwt.rs  principal.rs
src/config/: app.rs  csrf.rs  db.rs  env.rs  image.rs  mail.rs  upload.rs  web.rs
src/db/: connection.rs  mysql_adapter.rs  port.rs
src/error/: entity.rs
src/graphql/: config.rs  context.rs  graphiql.rs  guard.rs  handler.rs
src/image/: image_rs_processor.rs  processor.rs
src/notification/: email.rs  email_sender.rs
src/notification/smtp/: smtp_email_sender.rs
src/time/: clock.rs  local.rs  system_clock.rs
src/utils/time/: local.rs
src/web/: cors.rs  csrf.rs  fallback.rs  spa.rs  template.rs  upload.rs
src/web/spa/: entry.rs
src/web/upload/: local_storage.rs  storage.rs  upload_handler.rs  uploader.rs
