[package]
name = "wzs-web"
version = "0.1.0"
edition = "2024"

[lib]
name = "wzs_web"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = { version = "0.8.6", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.1", features = ["cookie", "cookie-private", "cookie-signed", "multipart"] }
base64 = "0.22.1"
chrono = "0.4.42"
chrono-tz = "0.10.4"
dotenvy = "0.15.7"
hmac = "0.12.1"
image = "0.25.8"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
mysql = "26.0.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
uuid = { version = "1.19.0", features = ["serde", "v4", "v7"] }

[dev-dependencies]
futures = "0.3.31"
http-body-util = "0.1.3"
temp-env = "0.3.6"
